--- a/site_config.yml
+++ b/site_config.yml
@@ -1,30 +1,11 @@
-﻿Title: ZOA Charts
+﻿Title: ZSE Charts
 Airports:
   Bravo:
-    - SFO
+    - SEA
   Charlie:
-    - OAK
-    - SJC
-    - SMF
-    - RNO
-    - FAT
-    - MRY
+    - PDX
   Delta:
-    - APC
-    - CCR
-    - CIC
-    - HWD
-    - LVK
-    - MER
-    - MHR
-    - MOD
-    - NUQ
-    - PAO
-    - RDD
-    - RHV
-    - SAC
-    - SCK
-    - SNS
-    - SQL
-    - STS
-    - TRK
+    - BFI
+    - BLI
+    - PAE
+    - GEG
