--- a/.github/workflows/pr-linux.yaml
+++ b/.github/workflows/pr-linux.yaml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build
-        run: build-cloudflare.sh
+        run: ./build-cloudflare.sh
