--- a/.github/workflows/pr-linux.yaml
+++ b/.github/workflows/pr-linux.yaml
@@ -8,10 +8,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        dotnet-version: ["7.0.x"]
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ${{ matrix.dotnet-version }}
+
+      - name: Install dependencies
+        run: dotnet restore
 
       - name: Build
-        run: ./build-cloudflare.sh
-        shell: sh
+        run: dotnet build --configuration Release --no-restore
