--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -6,12 +6,13 @@ on:
       - master
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  build_matrix:
     strategy:
       matrix:
         dotnet-version: ["7.0.x"]
+        os: ["ubuntu-latest", "windows-latest"]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout code
